--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -242,7 +242,7 @@ $filter--light: brightness(0.8) contrast(1.2);
 // -  <<----------<< Button >>---------->>
 
 // #  Button
-$button--height: 65;
+$button--height: $filler--l;
 $button--depth: 6;
 $button--speed: 0.06;
 $button--timing-function: ease-out;
