--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,7 +8,7 @@
 
 // #  <h1>
 h1 {
-  padding: $filler--l 0;
+  padding: $filler--l $filler--xs;
   color: var(--color-primary);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -22,7 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
-  padding: $filler--l 0;
+  padding: $filler--l $filler--xs;
   color: var(--color-primary);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
@@ -42,7 +42,7 @@ h2 {
 
 // #  <h3>
 h3 {
-  padding: $filler--m 0;
+  padding: $filler--m $filler--xs;
   color: var(--color-secondary);
   font-family: $font-family--article-title;
   font-size: $font-size--4;
@@ -62,7 +62,7 @@ h3 {
 
 // #  <h4>
 h4 {
-  padding: $filler--m 0;
+  padding: $filler--m $filler--xs;
   color: var(--color-secondary);
   font-family: $font-family--text;
   font-size: $font-size--3;
@@ -82,7 +82,7 @@ h4 {
 
 // #  <h5>
 h5 {
-  padding: $filler--s 0;
+  padding: $filler--s $filler--xs;
   color: var(--color-tertiary);
   font-family: $font-family--text;
   font-size: $font-size--2;
@@ -102,7 +102,7 @@ h5 {
 
 // #  <h6>
 h6 {
-  padding: $filler--s 0;
+  padding: $filler--s $filler--xs;
   color: var(--color-tertiary);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -129,7 +129,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: $filler--xxs 0;
+  padding: $filler--xs;
   color: var(--color-foreground);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -156,7 +156,12 @@ figcaption {
 // #  <li>
 
 li {
+  padding: $filler--xs 0;
   list-style-type: none;
+
+  a i {
+    margin-right: $filler--xs;
+  }
 }
 
 // #  <p>
@@ -169,7 +174,7 @@ li {
 
 a,
 button {
-  padding: $filler--xs 0;
+  padding: $filler--xs;
   color: var(--color-primary);
   font-family: $font-family--link;
   font-size: $font-size--2;
@@ -177,7 +182,6 @@ button {
   font-weight: $font-weight--link;
   letter-spacing: $letter-spacing--link;
   text-align: $line-height--link;
-  text-align: $text-align--link;
   text-decoration: none;
   text-transform: $text-transform--link;
 
