--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -10,29 +10,30 @@ button {
 
 // -  <<----------<< Specific >>---------->>
 
-.button {
+.btn {
   position: relative;
   top: 0;
-  display: inline-flex;
-
-  width: auto;
-  height: $button--height + px;
-  justify-content: center;
-  box-sizing: border-box;
-  padding: 0 (($button--height/2) + px);
+  // @include dimensions(none, fit-content, $button--height);
+  @include dimensions(none, auto, auto);
+  @include inline-flex-container;
+  @include flex-items;
+  // width: auto;
+  // height: $button--height + px;
+  // justify-content: center;
+  // padding: 0 (($button--height/2) + px);
   border-top: 1px solid lightness(var(--color-secondary), 1.22);
   border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
-  margin-bottom: 15px;
-  margin-left: 5px;
+  margin-bottom: $filler--s;
+  margin-left: $filler--s;
   background: linear-gradient(
     to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
     adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
   );
-  border-radius: 5px;
+  border-radius: $border-radius--xs;
   color: lightness(var(--color-secondary), 0.9);
-  line-height: $button--height + px;
+  // line-height: $button--height + px;
   text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
@@ -40,9 +41,13 @@ button {
   &:visited {
     color: lightness(var(--color-secondary), 0.9);
   }
+
+  &:first-of-type {
+    margin-left: 0;
+  }
 }
 
-.button:hover {
+.btn:hover {
   background: linear-gradient(
     to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
@@ -51,7 +56,7 @@ button {
   );
 }
 
-.button:active {
+.btn:active {
   top: $button--depth + px;
   color: lightness(var(--color-secondary), 1.45);
 
@@ -61,21 +66,31 @@ button {
   }
 }
 
-.button::before {
+.btn::before {
   position: absolute;
   z-index: -1;
   top: ($button--depth) + px;
   right: 0;
   left: 0;
   display: inline-flex;
-  height: ($button--height) + px;
+  height: $button--height;
   background: linear-gradient(
     to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
   );
-  border-radius: 5px;
+  border-radius: $border-radius--xs;
   box-shadow: $box-shadow--button---before;
   content: '';
   transition: all (($button--speed * 1.3) + s) $button--timing-function;
+}
+
+.btn--text {
+  padding: 0 ($button--height/4);
+}
+
+.btn--icon {
+  i {
+    @include dimensions(btn, $font-size--3);
+  }
 }
