--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -11,30 +11,25 @@ button {
 // -  <<----------<< Specific >>---------->>
 
 .btn {
-  position: relative;
-  top: 0;
-  // @include dimensions(none, fit-content, $button--height);
   @include dimensions(none, auto, auto);
   @include inline-flex-container;
   @include flex-items;
-  // width: auto;
-  // height: $button--height + px;
-  // justify-content: center;
-  // padding: 0 (($button--height/2) + px);
+
+  position: relative;
+  top: 0;
   border-top: 1px solid lightness(var(--color-secondary), 1.22);
   border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
-  margin-bottom: $filler--s;
-  margin-left: $filler--s;
-  background: linear-gradient(
-    to bottom,
+  margin-left: $filler--xs;
+  background:
+    linear-gradient(to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
-  );
-  border-radius: $border-radius--xs;
+    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%);
+  border-radius: $border-radius--xxs;
   color: lightness(var(--color-secondary), 0.9);
   // line-height: $button--height + px;
-  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
+  text-shadow:
+    0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
 
@@ -48,12 +43,11 @@ button {
 }
 
 .btn:hover {
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%
-  );
+    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%);
 }
 
 .btn:active {
@@ -74,12 +68,11 @@ button {
   left: 0;
   display: inline-flex;
   height: $button--height;
-  background: linear-gradient(
-    to top,
+  background:
+    linear-gradient(to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
-  );
-  border-radius: $border-radius--xs;
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
+  border-radius: $border-radius--xxs;
   box-shadow: $box-shadow--button---before;
   content: '';
   transition: all (($button--speed * 1.3) + s) $button--timing-function;
@@ -92,5 +85,6 @@ button {
 .btn--icon {
   i {
     @include dimensions(btn, $font-size--3);
+    // text-align: center;
   }
 }
