--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -62,10 +62,10 @@
   }
 }
 
-.fa-share-alt {
+.fa-shopping-basket {
   &:hover {
     @include box-transition;
 
-    color: #1da1f2;
+    color: #000;
   }
 }
