--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -11,25 +11,24 @@ button {
 // -  <<----------<< Specific >>---------->>
 
 .btn {
-  @include dimensions(none, auto, auto);
   @include inline-flex-container;
   @include flex-items;
 
   position: relative;
   top: 0;
+  padding: $filler--xxs;
   border-top: 1px solid lightness(var(--color-secondary), 1.22);
   border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
   margin-left: $filler--xs;
-  background:
-    linear-gradient(to bottom,
+  background: linear-gradient(
+    to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%);
-  border-radius: $border-radius--xxs;
+    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
+  );
+  border-radius: $border-radius--xs;
   color: lightness(var(--color-secondary), 0.9);
-  // line-height: $button--height + px;
-  text-shadow:
-    0 -2px 0 lightness(var(--color-secondary), 0.8),
+  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
 
@@ -43,11 +42,12 @@ button {
 }
 
 .btn:hover {
-  background:
-    linear-gradient(to bottom,
+  background: linear-gradient(
+    to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%);
+    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%
+  );
 }
 
 .btn:active {
@@ -68,11 +68,12 @@ button {
   left: 0;
   display: inline-flex;
   height: $button--height;
-  background:
-    linear-gradient(to top,
+  background: linear-gradient(
+    to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
-  border-radius: $border-radius--xxs;
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
+  );
+  border-radius: $border-radius--xs;
   box-shadow: $box-shadow--button---before;
   content: '';
   transition: all (($button--speed * 1.3) + s) $button--timing-function;
@@ -83,8 +84,7 @@ button {
 }
 
 .btn--icon {
-  i {
-    @include dimensions(btn, $font-size--3);
-    // text-align: center;
-  }
+  @include dimensions(btn, $font-size--3);
+  // width: $font-size--5;
+  // padding: $filler--xxs;
 }
