--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -99,7 +99,7 @@ $font-size--7: $font-size--6 * $font-scale; // 61.04px
 // #  Font-Family
 $font-family--subject: 'Montserrat', sans-serif;
 $font-family--section-title: 'Montserrat', sans-serif;
-$font-family--article-title: 'Montserrat', sans-serif;
+$font-family--article-title: 'Oswald', sans-serif;
 $font-family--text: 'Roboto', sans-serif;
 $font-family--link: 'Montserrat', monospace;
 
