--- a/assets/styles/scss/components/_button-backup.scss
+++ b/assets/styles/scss/components/_button-backup.scss
@@ -5,48 +5,43 @@
 // -  <<----------<< General >>---------->>
 
 button {
-  border: 0;
+  // ...
 }
 
 // -  <<----------<< Specific >>---------->>
 
-.button {
+.btn {
+  @include inline-flex-container;
+  @include flex-items;
+
   position: relative;
   top: 0;
-  display: inline-block;
-  width: auto;
-  height: $button--height + px;
-  box-sizing: border-box;
-  padding: 0 (($button--height/2) + px);
+  padding: $filler--xxs;
   border-top: 1px solid lightness(var(--color-secondary), 1.22);
   border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
-  margin-bottom: 15px;
-  margin-left: 5px;
+  margin-left: $filler--xs;
   background:
     linear-gradient(to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
     adjust-hsl(var(--color-secondary), 1, 1, 1) 100%);
-  border-radius: 5px;
+  border-radius: $border-radius--xs;
   color: lightness(var(--color-secondary), 0.9);
-  cursor: pointer;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 2em;
-  font-weight: bold;
-  line-height: $button--height + px;
-  text-decoration: none;
   text-shadow:
     0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
-  zoom: 2;
 
   &:visited {
     color: lightness(var(--color-secondary), 0.9);
   }
+
+  &:first-of-type {
+    margin-left: 0;
+  }
 }
 
-.button:hover {
+.btn:hover {
   background:
     linear-gradient(to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
@@ -54,13 +49,9 @@ button {
     adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%);
 }
 
-.button:active {
+.btn:active {
   top: $button--depth + px;
   color: lightness(var(--color-secondary), 1.45);
-  text-shadow:
-    0 -2px 0 lightness(var(--color-secondary), 1),
-    0 1px 1px lightness(var(--color-secondary), 1.2),
-    0 0 4px $color-white;
 
   &::before {
     top: 0;
@@ -68,20 +59,30 @@ button {
   }
 }
 
-.button::before {
+.btn::before {
   position: absolute;
   z-index: -1;
   top: ($button--depth) + px;
   right: 0;
   left: 0;
-  display: inline-block;
-  height: ($button--height) + px;
+  display: inline-flex;
+  height: $button--height;
   background:
     linear-gradient(to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
-  border-radius: 5px;
+  border-radius: $border-radius--xs;
   box-shadow: $box-shadow--button---before;
   content: '';
   transition: all (($button--speed * 1.3) + s) $button--timing-function;
+}
+
+.btn--text {
+  padding: 0 ($button--height/4);
+}
+
+.btn--icon {
+  @include dimensions(btn, $font-size--3);
+  // width: $font-size--5;
+  // padding: $filler--xxs;
 }
