--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -17,23 +17,24 @@ button {
   position: relative;
   top: 0;
   padding: $filler--xxs;
-  border-top: 1px solid lightness(var(--color-secondary), 1.22);
-  border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
+  border-top: 1px solid lightness(var(--color-tertiary), 1.22);
+  border-bottom: 1px solid lightness(var(--color-tertiary), 1.2);
+  margin-bottom: calc(#{$filler--xs} / 2);
   margin-left: $filler--xs;
-  background: linear-gradient(
-    to bottom,
-    adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
-  );
+  background:
+    linear-gradient(to bottom,
+    adjust-hsl(var(--color-tertiary), 1, 1.35, 1.15) 0%,
+    adjust-hsl(var(--color-tertiary), 1, 1.15, 1.12) 26%,
+    adjust-hsl(var(--color-tertiary), 1, 1, 1) 100%);
   border-radius: $border-radius--xs;
   color: lightness(var(--color-secondary), 0.9);
-  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
+  text-shadow:
+    0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
 
   &:visited {
-    color: lightness(var(--color-secondary), 0.9);
+    color: lightness(var(--color-tertiary), 0.9);
   }
 
   &:first-of-type {
@@ -42,12 +43,11 @@ button {
 }
 
 .btn:hover {
-  background: linear-gradient(
-    to bottom,
-    adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%
-  );
+  background:
+    linear-gradient(to bottom,
+    adjust-hsl(var(--color-tertiary), 1, 1.35, 1.22) 0%,
+    adjust-hsl(var(--color-tertiary), 1, 1.15, 1.19) 26%,
+    adjust-hsl(var(--color-tertiary), 1, 1, 1.07) 100%);
 }
 
 .btn:active {
@@ -68,11 +68,10 @@ button {
   left: 0;
   display: inline-flex;
   height: $button--height;
-  background: linear-gradient(
-    to top,
+  background:
+    linear-gradient(to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
-  );
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
   border-radius: $border-radius--xs;
   box-shadow: $box-shadow--button---before;
   content: '';
@@ -85,6 +84,4 @@ button {
 
 .btn--icon {
   @include dimensions(btn, $font-size--3);
-  // width: $font-size--5;
-  // padding: $filler--xxs;
 }
