--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -13,7 +13,7 @@
   $justify: center,
   $align: center
 ) {
-  @include dimensions;
+  // @include dimensions;
 
   // #  wrapped-Block Container
   @if $container-type == wrapped-block {
