--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -64,9 +64,9 @@ body {
 .main__container > section {
   min-height: 100vh;
 
-  > div {
-    min-height: 100vh;
-  }
+  // > div {
+  //   min-height: 100vh;
+  // }
 }
 
 .test-container {
