--- a/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
@@ -5,7 +5,11 @@
 .hot-items {
   &__container {
     // @include dimensions;
-    // @include block-flex-container;
+    // @include block-flex-container(wrap, );
+
+    display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
   }
 
   &__title {
@@ -14,15 +18,20 @@
 }
 
 .hot-item {
-  // ...
   &__container {
-    position: relative;
     // max-width: 375px;
-    flex-wrap: wrap;
+
+    // @include dimensions(none, auto, auto);
+
+    // flex: 1 1 auto;
+
+    position: relative;
+    // width: auto;
     min-width: calc(#{$dimension--xxs} - #{$filler--l});
     max-width: calc(#{$dimension--xs} - #{$filler--l});
-    max-width: 400px;
+    max-width: 375px;
     height: 667px;
+    // flex: 1 1 auto;
   }
 
   &__title {
@@ -83,6 +92,7 @@
   }
 
   &__caption-btns {
+    @include dimensions;
     @include inline-flex-container(nowrap, row, space-between, center);
   }
 
