--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -40,6 +40,7 @@ header nav {
   // ...
   min-width: calc(#{$dimension--xxs} - #{$filler--xl});
   max-width: $dimension--xl;
+  @include dimensions;
 }
 
 .main-nav {
