--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -462,8 +462,8 @@ html {
 }
 
 body {
-  min-width: calc(320px - 1.5rem);
-  max-width: 1280px;
+  min-width: 320px;
+  max-width: 1920px;
   margin: 0 auto;
   background-color: var(--color-background);
   color: var(--color-foreground);
@@ -511,20 +511,6 @@ body {
 
 .main__container > section {
   min-height: 100vh;
-}
-
-.test-container {
-  margin: 0 auto;
-  background-color: var(--color-background);
-}
-
-.test-container--2 {
-  margin: 0 auto;
-  background-color: var(--color-secondary);
-}
-
-body {
-  overflow-y: scroll;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1427,17 +1413,38 @@ input:checked + .slider::before {
 -  SECTION 2: Hot Items
 \* -------------------------------------------------------------------------- */
 .hot-items__container {
+  width: 100%;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  place-content: space-between;
+  place-content: center;
+}
+
+.hot-items__title {
+  padding: 2rem 0 0.5rem 0;
 }
 
 .hot-item__container {
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  place-self: center;
   position: relative;
   min-width: calc(320px - 2rem);
-  max-width: calc(640px - 2rem);
-  max-width: 375px;
-  height: 667px;
+  max-width: calc((320px / 4) + 320px);
+  height: 80vh;
 }
 
 .hot-item__title {
