--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -23,7 +23,7 @@ html {
 // #  <body>
 body {
   min-width: $dimension--xxs;
-  max-width: $dimension--xl;
+  max-width: $dimension--l;
   margin: $center-me;
   background-color: var(--color-background);
   color: var(--color-foreground);
