style-main: more styling v12

--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -36,6 +36,8 @@ img {
   // @media (prefers-color-scheme: dark) {
   //   filter: brightness(0.8) contrast(1.2);
   // }
+
+  filter: brightness(0.8) contrast(1.2);
 }
 
 // -  <<----------<< Specific >>---------->>
