--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -129,7 +129,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: $filler--xs;
+  padding: 0;
   color: var(--color-foreground);
   font-family: $font-family--text;
   font-size: $font-size--1;
