--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -654,7 +654,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: 0.5rem;
+  padding: 0;
   color: var(--color-foreground);
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
@@ -726,6 +726,8 @@ img {
      object-fit: cover;
   -o-object-position: center center;
      object-position: center center;
+  -webkit-filter: brightness(0.8) contrast(1.2);
+          filter: brightness(0.8) contrast(1.2);
 }
 
 /* ========================================================================== *\
@@ -1107,10 +1109,16 @@ ul.menu-left.collapse {
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  position: relative;
   overflow: hidden;
+  min-width: calc(320px - 2rem);
+  max-width: calc((320px / 3) + 320px);
+  height: 80vh;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   /* Prevent background color leak outs */
   background-clip: padding-box;
-  background-color: maroon;
   border-radius: 16px;
 }
 
@@ -1394,16 +1402,20 @@ input:checked + .slider::before {
   max-height: 40vh;
   margin: 1.5rem 0;
   fill: var(--color-primary);
+  -webkit-filter: drop-shadow(0 0 0.05rem var(--color-background));
+          filter: drop-shadow(0 0 0.05rem var(--color-background));
 }
 
 .hero__subject {
   color: var(--color-primary);
-  -webkit-filter: drop-shadow(0 0 0.1rem var(--color-background));
-          filter: drop-shadow(0 0 0.1rem var(--color-background));
+  -webkit-filter: drop-shadow(0 0 0.05rem var(--color-background));
+          filter: drop-shadow(0 0 0.05rem var(--color-background));
 }
 
 .hero__title {
   color: var(--forground-color);
+  -webkit-filter: drop-shadow(0 0 0.05rem var(--color-background));
+          filter: drop-shadow(0 0 0.05rem var(--color-background));
   font-family: monospace;
   font-size: 1.95312rem;
   font-weight: 600;
@@ -1441,12 +1453,6 @@ input:checked + .slider::before {
   -ms-flex-negative: 1;
       flex-shrink: 1;
   place-self: center;
-  position: relative;
-  min-width: calc(320px - 2rem);
-  max-width: calc((320px / 3) + 320px);
-  height: 80vh;
-  -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
   margin: 1.5rem;
 }
 
@@ -1459,6 +1465,8 @@ input:checked + .slider::before {
   right: 0;
   left: 0;
   padding: 1rem;
+  -webkit-filter: drop-shadow(0 0 0.05rem var(--color-background));
+          filter: drop-shadow(0 0 0.05rem var(--color-background));
   font-variant: normal;
   font-weight: 700;
 }
@@ -1477,12 +1485,13 @@ input:checked + .slider::before {
   position: absolute;
   z-index: 1;
   right: 0;
-  bottom: -30%;
-  bottom: 0;
+  bottom: 0%;
+  bottom: -29%;
   left: 0;
   padding: 1rem;
   -webkit-box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
+  background-color: rgba(0, 0, 0, 0.55);
 }
 
 .hot-item__caption-title {
@@ -1496,7 +1505,6 @@ input:checked + .slider::before {
 
 .hot-item__caption-text {
   overflow: auto;
-  height: 100px;
   height: calc(320px / 3);
   margin: 1rem 0;
   color: var(--color-background);
@@ -1548,11 +1556,30 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 -  SECTION 3: About
 \* -------------------------------------------------------------------------- */
+.about__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  place-content: center;
+  place-items: center;
+  background-color: cornsilk;
+}
+
 .about__title {
+  padding: 1rem;
   background-color: saddlebrown;
 }
 
 .about__container--visual {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
   background-color: bisque;
 }
 
@@ -1561,19 +1588,29 @@ input:checked + .slider::before {
 }
 
 .about__container--text {
+  width: 100%;
+  height: 80vh;
   background-color: sienna;
 }
 
 .about__title--text {
+  padding-top: 0;
   background-color: burlywood;
 }
 
 .about__sub-title {
+  padding: 0.5rem;
   background-color: brown;
+  font-size: 1.25rem;
+  font-style: italic;
 }
 
 .about__paragraph {
+  overflow: auto;
+  height: calc(320px + (320px / 4));
+  margin: 1rem 0;
   background-color: rosybrown;
+  color: var(--color-background);
 }
 
 .about-visual__container {
